# picis

./: README.md
app/: build.gradle
app/android/: AndroidManifest.xml  build.gradle
app/android/res/values/: strings.xml
app/android/src/com/picis/piano/: AndroidLauncher.java
app/core/src/com/picis/piano/: AudioLibrary.java  GameContext.java  Piano.java  PianoTeacher.java  PianoTearcher.java
app/core/src/com/picis/piano/audio/: RecorderManger.java
app/core/src/com/picis/piano/screen/: StudyScreen.java
app/core/src/com/picis/piano/sheet/: GuidoExtracter.java  MusicBar.java  MusicClef.java  MusicDuration.java  MusicKey.java  MusicNote.java  MusicPiece.java
app/core/src/com/picis/piano/ui/: Position.java  Staff.java  UiObject.java  World.java
app/core/src/com/picis/piano/utils/: StringUtils.java
app/core/test/com/picis/piano/: GuidoExtracterTest.java
app/desktop/: build.gradle
app/desktop/src/com/picis/piano/desktop/: DesktopLauncher.java
app/ios/: build.gradle  robovm.properties
app/ios/src/com/picis/piano/: IOSLauncher.java
aud/: Cargo.toml
aud/src/: lib.rs  main.rs  pitch_detection.rs
aud/src/utils/: buffer.rs
audio/: Cargo.toml
audio/src/: lib.rs  main.rs
tests/: main.rs
