[package]
name = "audio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object-pool = "0.5.3"
rustfft = { version = "5.0.1", default-features = false }
anyhow = "1.0"
clap = "2.33.3"
cpal = "0.13.4"
hound = "3.4.0"
plotters = "^0.3.1"

[dev-dependencies]
criterion = "0.3"

[package.metadata.docs.rs]
# Including this header allows for math to be rendered in the docs.
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]

[[bench]]
name = "utils_benchmark"
harness = false

[lib]
name = "pitchdetector"
crate-type = ["rlib", "dylib"]